# hello-triangle-sdl-gpu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c  vcpkg.json
shaders/compiled/: shader.frag.dxil  shader.vert.dxil
shaders/source/: shader.frag.hlsl  shader.vert.hlsl
